minimap fixes ti some work on the ranger and poacher